L5-policies/ingress/02-allowweb.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-policy
  namespace: front-end
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - from:
      - ipBlock:
          cidr: 172.16.0.0/16
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-policy
  namespace: back-end
spec:
  podSelector: {}
  ingress: []
